# cpp-trace-api

./: .appveyor.yml  .travis.yml  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md  RELEASENOTES.md  build_docs.sh  conanfile.py  vs2022.conanprofile
.github/workflows/: archive-docs.yml  main.yml
ci/: build_docs.sh  deploy.sh
ci/pipelines/: Build.jenkinsfile
src/TraceAPI/: CMakeLists.txt  Channel.cpp  Channel.h  ChannelMacro.h  ChannelMgr.cpp  ChannelMgr.h  Configuration.cpp  Configuration.h  FileAgent.cpp  FileAgent.h  FileAgentSinkBackend.cpp  FileAgentSinkBackend.h  IFileAgent.h  ITraceAgent.h  TraceAgent.cpp  TraceAgent.h  TraceAgentSinkBackend.cpp  TraceAgentSinkBackend.h  UTCOffset.cpp  UTCOffset.h  stdafx.h
test/TraceAPITest/: CMakeLists.txt  stdafx.h
test/TraceAPITest/Tests/: TraceFileBackupTest.cpp  TraceFileBaseTest.h  TraceFileContentTest.cpp  TraceFileFieldsTest.cpp  TraceFileRotationTest.cpp  TraceMultipleChannelsTest.cpp  TraceSeverityFilterTest.cpp
test_package/: CMakeLists.txt  TraceAPIExample.cpp  conanfile.py
